Backend/offers-service/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: smartek
  labels:
    app.kubernetes.io/part-of: smartek-platform
    monitoring: "true"   # label utilisé par Prometheus pour le scraping
