Backend/offers-service/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: offers-service
  namespace: smartek
  labels:
    app: offers-service
    app.kubernetes.io/name: offers-service
    app.kubernetes.io/part-of: smartek-platform
  annotations:
    # Prometheus découverte automatique du service
    prometheus.io/scrape: "true"
    prometheus.io/path:   "/actuator/prometheus"
    prometheus.io/port:   "8085"
spec:
  type: ClusterIP
  selector:
    app: offers-service
  ports:
    - name: http
      protocol: TCP
      port: 8085
      targetPort: 8085
